--- a/style.css
+++ b/style.css
@@ -68,13 +68,23 @@ body {
 }
 
 @media screen and (max-width: 768px) {
+  body {
+    height: auto;
+  }
+
   .option-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
   }
 
-  body {
-    height: auto;
+  .target-box {
+    width: 12rem;
+    height: 12rem;
+  }
+
+  .option {
+    width: 100%;
+    height: 2rem;
   }
 }
 
